adjusted the text and sizes - Added contact process

--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,10 @@
   font-family: "AlternateGotNo1D", sans-serif;
   font-weight: 400;
   color: rgb(0, 0, 0);
-  font-size: 60px;
+  font-size: 75px;
   line-height: 61px;
+  /* font-size: 95px;
+  line-height: 61px; */
 }
 
 .akziden {
@@ -71,4 +73,8 @@
 .navbar-logo {
   /* width: 100%;
   max-width: none; */
+}
+
+.green-bg {
+  background-color: #004621;
 }
